--- a/src/components/Category/category.css
+++ b/src/components/Category/category.css
@@ -2,14 +2,18 @@ body {
   background-color: #f5ecd5;
 }
 .card img {
-  width: 300px;
+  width: 280px;
   height: 180px;
   border-radius: 10px;
+}
+.card:hover {
+  transform: scale(1.1);
 }
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: transform 0.3s ease;
 }
 
 .category {
