--- a/src/components/Category/category.css
+++ b/src/components/Category/category.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   align-items: center;
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .category {
